--- a/src/app/shared/components/nav-bar/nav-bar.component.scss
+++ b/src/app/shared/components/nav-bar/nav-bar.component.scss
@@ -13,6 +13,7 @@
 
 	&--user {
 		&--mobile {
+			z-index: 3;
 			position: relative;
 			background-color: $base-color-darker;
 			color: $font-color-dark;
