--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -42,5 +42,6 @@ $app-primary: mat-palette($primary-color);
 $app-accent: mat-palette($accent-1, A200, A100, A400);
 $app-warn: mat-palette($alert);
 
+$screen-size-small-desktop: 1200px;
 $screen-size-desktop: 600px;
 $screen-size-tablet: 360px;
